--- a/Thesis/duoforside.tex
+++ b/Thesis/duoforside.tex
@@ -133,7 +133,7 @@
 \newcommand{\duo@uio@bm}{Universitetet i Oslo}
 \newcommand{\duo@uio@nn}{Universitetet i Oslo}
 
-\newcommand{\duo@fac@eng}{Faculty of mathematics and natural sciences}
+\newcommand{\duo@fac@eng}{Faculty of Mathematics and Natural sciences}
 \newcommand{\duo@fac@bm}{Det matematisk-naturvitenskapelige fakultet}
 \newcommand{\duo@fac@nn}{Det matematisk-naturvitenskaplege fakultet}
 
